main-class-alm-done

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:regular,500,700,900" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Raleway:700" rel="stylesheet" />
     <title>Home-Work</title>
@@ -12,19 +12,19 @@
 <body>
     <header class="header">
         <a href="" class="header__logo logo">
-            <span>Web</span> Studio
+            <span>Web</span>Studio
         </a>
         <nav class="header__menu menu">
             <ul class="menu__list">
                 <li class="menu__item"><a href="" class="menu__link">Студия</a></li>
-                <li class="menu__item"><a href="" class="menu__link">Портфолио</a></li>
+                <li class="menu__item"><a href="./portfolio.html" class="menu__link">Портфолио</a></li>
                 <li class="menu__item"><a href="" class="menu__link">Контакты</a></li>
             </ul>
         </nav>
 
         <ul class="header__contacts contacts-header">
-            <li class="contacts-header__item"><a href="mailto:info@devstudio.com" class="contacts__link">info@devstudio.com</a></li>
-            <li class="contacts-header__item"><a href="tel:+380961111111" class="contacts__link">+38 096 111 11 11</a></li>
+            <li class="contacts-header__item"><a href="mailto:info@devstudio.com" class="contacts-header__link">info@devstudio.com</a></li>
+            <li class="contacts-header__item"><a href="tel:+380961111111" class="contacts-header__link">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <main>
@@ -93,14 +93,14 @@
 
         <footer class="footer">
             <a href="" class="footer__logo logo">
-                WebStudio
+                <span>Web</span>Studio
             </a>
          
         <address class="footer__address">
             <p>г. Киев, пр-т Леси Украинки, 26</p>
             <ul class="footer__contacts contacts-footer">
-                <li class="contacts-footer__item"><a href="mailto:info@devstudio.com" class="contacts__link">info@devstudio.com</a></li>
-                <li class="contacts-footer__item"><a href="tel:+380961111111" class="contacts__link">+38 096 111 11 11</a></li>
+                <li class="contacts-footer__item"><a href="mailto:info@devstudio.com" class="contacts-footer__link">info@devstudio.com</a></li>
+                <li class="contacts-footer__item"><a href="tel:+380961111111" class="contacts-footer__link">+38 096 111 11 11</a></li>
             </ul>
         </address>
       
