--- a/index.html
+++ b/index.html
@@ -35,21 +35,21 @@
 
         <section class="peculiarities">
             <ul class="peculiarities__list">
-                <li class="peculiarities__item item-ppeculiarities">
-                    <h3 class="item-ppeculiarities__title">Внимание к деталям</h3>
-                    <p class="item-ppeculiarities__text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                <li class="peculiarities__item item-peculiarities">
+                    <h3 class="item-peculiarities__title">Внимание к деталям</h3>
+                    <p class="item-peculiarities__text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
-                <li class="peculiarities__item item-ppeculiarities">
-                    <h3 class="item-ppeculiarities__title">Пунктуальность</h3>
-                    <p class="item-ppeculiarities__text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                <li class="peculiarities__item item-peculiarities">
+                    <h3 class="item-peculiarities__title">Пунктуальность</h3>
+                    <p class="item-peculiarities__text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
-                <li class="peculiarities__item item-ppeculiarities">
-                    <h3 class="item-ppeculiarities__title">Планирование</h3>
-                    <p class="item-ppeculiarities__text">Равным образом консультация с широким активом в значительной степени обуславливает</p>
+                <li class="peculiarities__item item-peculiarities">
+                    <h3 class="item-peculiarities__title">Планирование</h3>
+                    <p class="item-peculiarities__text">Равным образом консультация с широким активом в значительной степени обуславливает</p>
                 </li>
-                <li class="peculiarities__item item-ppeculiarities">
-                    <h3 class="item-ppeculiarities__title">Современные технологии</h3>
-                    <p class="item-ppeculiarities__text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                <li class="peculiarities__item item-peculiarities">
+                    <h3 class="item-peculiarities__title">Современные технологии</h3>
+                    <p class="item-peculiarities__text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
         </section>
