--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </a>
         <nav class="header__menu menu">
             <ul class="menu__list">
-                <li class="menu__item"><a href="" class="menu__link">Студия</a></li>
+                <li class="menu__item"><a href="" class="menu__link active">Студия</a></li>
                 <li class="menu__item"><a href="./portfolio.html" class="menu__link">Портфолио</a></li>
                 <li class="menu__item"><a href="" class="menu__link">Контакты</a></li>
             </ul>
