--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
         <nav class="header__menu menu">
             <ul class="menu__list">
                 <li class="menu__item"><a href="./index.html" class="menu__link">Студия</a></li>
-                <li class="menu__item"><a href="" class="menu__link">Портфолио</a></li>
+                <li class="menu__item"><a href="" class="menu__link active">Портфолио</a></li>
                 <li class="menu__item"><a href="" class="menu__link">Контакты</a></li>
             </ul>
         </nav>
