--- a/portfolio.html
+++ b/portfolio.html
@@ -5,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:regular,500,700,900" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css?family=Raleway:700" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"rel="stylesheet">
     <title>Portfolio</title>
 </head>
 <body>
@@ -32,7 +31,7 @@
     
     <main>
         <section class="portfolio">
-            <nav class="portfolio__filter filter">
+            <nav class="portfolio__filter filter"></nav>
                 <ul class="filter__list">
                     <li class="filter__item active">
                         <button type="button">Все</button>
