--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
     
     <main>
         <section class="portfolio">
-            <nav class="portfolio__filter filter"></nav>
+            <div class="portfolio__filter filter">
                 <ul class="filter__list">
                     <li class="filter__item active">
                         <button type="button">Все</button>
@@ -49,8 +49,7 @@
                         <button type="button">Маркетинг</button>
                     </li>
                 </ul>
-            
-            </nav>
+            </div>
             <ul class="portfolio__cards">
                 <li class="portfolio__card card-portfolio">
                     <a href="" class="card-portfolio__link">
