--- a/index.html
+++ b/index.html
@@ -98,10 +98,8 @@
         <address class="footer__address">
             <p>г. Киев, пр-т Леси Украинки, 26</p>
             <ul class="footer__contacts contacts-footer">
-                <li class="contacts-footer__item"><a href="mailto:info@devstudio.com"
-                        class="contacts-footer__link">info@devstudio.com</a></li>
-                <li class="contacts-footer__item"><a href="tel:+380961111111" class="contacts-footer__link">+38 096 111 11
-                        11</a></li>
+                <li class="contacts-footer__item"><a href="mailto:info@devstudio.com" class="contacts-footer__link">info@devstudio.com</a></li>
+                <li class="contacts-footer__item"><a href="tel:+380961111111" class="contacts-footer__link">+38 096 111 11 11</a></li>
             </ul>
         </address>
     
