--- a/index.html
+++ b/index.html
@@ -39,29 +39,29 @@
         </section>
 
         <section class="peculiarities section">
-            <div class="container">
-                    <ul class="peculiarities__list">
-                        <li class="peculiarities__item item-peculiarities">
-                            <h3 class="item-peculiarities__title">Внимание к деталям</h3>
-                            <p class="item-peculiarities__text">Идейные соображения, а также начало повседневной работы по формированию
-                                позиции.</p>
-                        </li>
-                        <li class="peculiarities__item item-peculiarities">
-                            <h3 class="item-peculiarities__title">Пунктуальность</h3>
-                            <p class="item-peculiarities__text">Задача организации, в особенности же рамки и место обучения кадров влечет за
-                                собой.</p>
-                        </li>
-                        <li class="peculiarities__item item-peculiarities">
-                            <h3 class="item-peculiarities__title">Планирование</h3>
-                            <p class="item-peculiarities__text">Равным образом консультация с широким активом в значительной степени
-                                обуславливает</p>
-                        </li>
-                        <li class="peculiarities__item item-peculiarities">
-                            <h3 class="item-peculiarities__title">Современные технологии</h3>
-                            <p class="item-peculiarities__text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.
-                            </p>
-                        </li>
-                    </ul>
+            <div class="peculiarities__container container">
+                <ul class="peculiarities__list">
+                    <li class="peculiarities__item item-peculiarities">
+                        <h3 class="item-peculiarities__title">Внимание к деталям</h3>
+                        <p class="item-peculiarities__text">Идейные соображения, а также начало повседневной работы по формированию
+                            позиции.</p>
+                    </li>
+                    <li class="peculiarities__item item-peculiarities">
+                        <h3 class="item-peculiarities__title">Пунктуальность</h3>
+                        <p class="item-peculiarities__text">Задача организации, в особенности же рамки и место обучения кадров влечет за
+                            собой.</p>
+                    </li>
+                    <li class="peculiarities__item item-peculiarities">
+                        <h3 class="item-peculiarities__title">Планирование</h3>
+                        <p class="item-peculiarities__text">Равным образом консультация с широким активом в значительной степени
+                            обуславливает</p>
+                    </li>
+                    <li class="peculiarities__item item-peculiarities">
+                        <h3 class="item-peculiarities__title">Современные технологии</h3>
+                        <p class="item-peculiarities__text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+                        </p>
+                    </li>
+                </ul>
             </div>            
         </section>
 
@@ -107,12 +107,12 @@
         </section>
     </main>
     <footer class="footer">
-        <div class="container">
+        <div class="footer__container container">
             <a href="" class="footer__logo logo">
                 <span>Web</span>Studio
             </a>
             <address class="footer__address">
-                <p>г. Киев, пр-т Леси Украинки, 26</p>
+                <div class="footer__street"><p>г. Киев, пр-т Леси Украинки, 26</p></div>
                 <ul class="footer__contacts contacts-footer">
                     <li class="contacts-footer__item"><a href="mailto:info@devstudio.com"
                             class="contacts-footer__link">info@devstudio.com</a></li>
