--- a/portfolio.html
+++ b/portfolio.html
@@ -11,27 +11,30 @@
 </head>
 <body>
     <header class="header">
-        <a href="" class="header__logo logo">
-            <span>Web</span>Studio
-        </a>
-        <nav class="header__menu menu">
-            <ul class="menu__list">
-                <li class="menu__item"><a href="./index.html" class="menu__link">Студия</a></li>
-                <li class="menu__item"><a href="" class="menu__link active">Портфолио</a></li>
-                <li class="menu__item"><a href="" class="menu__link">Контакты</a></li>
-            </ul>
-        </nav>
+        <div class="header__container container">
+            <a href="" class="header__logo logo">
+                <span>Web</span>Studio
+            </a>
+            <nav class="header__menu menu">
+                <ul class="menu__list">
+                    <li class="menu__item"><a href="" class="menu__link active">Студия</a></li>
+                    <li class="menu__item"><a href="./portfolio.html" class="menu__link">Портфолио</a></li>
+                    <li class="menu__item"><a href="" class="menu__link">Контакты</a></li>
+                </ul>
+            </nav>
     
-        <ul class="header__contacts contacts-header">
-            <li class="contacts-header__item"><a href="mailto:info@devstudio.com"
-                    class="contacts-header__link">info@devstudio.com</a></li>
-            <li class="contacts-header__item"><a href="tel:+380961111111" class="contacts-header__link">+38 096 111 11
-                    11</a></li>
-        </ul>
+            <ul class="header__contacts contacts-header">
+                <li class="contacts-header__item"><a href="mailto:info@devstudio.com"
+                        class="contacts-header__link">info@devstudio.com</a></li>
+                <li class="contacts-header__item"><a href="tel:+380961111111" class="contacts-header__link">+38 096 111 11
+                        11</a>
+                </li>
+            </ul>
+        </div>
     </header>
     
     <main>
-        <section class="portfolio">
+        <section class="portfolio section">
             <div class="portfolio__filter filter">
                 <ul class="filter__list">
                     <li class="filter__item active">
