--- a/index.html
+++ b/index.html
@@ -31,13 +31,12 @@
         </div>   
     </header>
     <main>
-        <section class="order section">
+        <section class="order">
             <div class="order__container">
                 <h1 class="order__title">Эффективные решения <br> для вашего бизнеса</h1>
                 <button type="button" class="order__button">Заказать услугу</button>
             </div>
         </section>
-
         <section class="peculiarities section">
             <div class="peculiarities__container container">
                 <ul class="peculiarities__list">
@@ -65,7 +64,7 @@
             </div>            
         </section>
 
-        <section class="occupation section">
+        <section class="occupation__section section">
             <div class="container">
                 <h2 class="occupation__title">Чем мы занимаемся</h2>
                 <ul class="occupation__list">
@@ -82,7 +81,7 @@
             </div>
         </section>
 
-        <section class="team section">
+        <section class="team__section section">
             <div class="container">
                 <h2 class="team__title">Наша команда</h2>
                 <ul class="team__cards card-team">
