--- a/index.html
+++ b/index.html
@@ -270,17 +270,45 @@
     </main>
     <footer class="footer">
         <div class="footer__container container">
-            <a href="" class="footer__logo logo">
-                <span>Web</span>Studio
-            </a>
-            <address class="footer__address">
-                <p>г. Киев, пр-т Леси Украинки, 26</p>
-                <ul class="footer__contacts contacts-footer">
-                    <li class="contacts-footer__item"><a href="mailto:info@devstudio.com"
-                            class="contacts-footer__link">info@devstudio.com</a></li>
-                    <li class="contacts-footer__item"><a href="tel:+380961111111" class="contacts-footer__link">+38 096 111 11 11</a></li>
+            <div class="footer__column">
+                <a href="" class="footer__logo logo">
+                    <span>Web</span>Studio
+                </a>
+                <address class="footer__address">
+                    <p>г. Киев, пр-т Леси Украинки, 26</p>
+                    <ul class="footer__contacts contacts-footer">
+                        <li class="contacts-footer__item"><a href="mailto:info@devstudio.com"
+                                class="contacts-footer__link">info@devstudio.com</a></li>
+                        <li class="contacts-footer__item"><a href="tel:+380961111111" class="contacts-footer__link">+38 096 111 11
+                                11</a></li>
+                    </ul>
+                </address>
+            </div>
+            <div class="footer__column">
+                <h3 class="footer__join">присоединяйтесь</h3>
+                <ul class="footer__icons">
+                    <li>
+                        <svg style="width:20px; height:20px;">
+                            <use href="./img/icons.svg#icon-instagram-2"></use>
+                        </svg>
+                    </li>
+                    <li>
+                        <svg style="width:20px; height:20px;">
+                            <use href="./img/icons.svg#icon-twitter-1"></use>
+                        </svg>
+                    </li>
+                    <li>
+                        <svg style="width:20px; height:20px;">
+                            <use href="./img/icons.svg#icon-facebook-1"></use>
+                        </svg>
+                    </li>
+                    <li>
+                        <svg style="width:20px; height:20px;">
+                            <use href="./img/icons.svg#icon-linkedin-1"></use>
+                        </svg>
+                    </li>
                 </ul>
-            </address>
+            </div>
         </div>
     </footer>
 </body>
