--- a/portfolio.html
+++ b/portfolio.html
@@ -24,10 +24,21 @@
             </nav>
     
             <ul class="header__contacts contacts-header">
-                <li class="contacts-header__item"><a href="mailto:info@devstudio.com"
-                        class="contacts-header__link">info@devstudio.com</a></li>
-                <li class="contacts-header__item"><a href="tel:+380961111111" class="contacts-header__link">+38 096 111 11
-                        11</a>
+                <li class="contacts-header__item">
+                    <a href="mailto:info@devstudio.com" class="contacts-header__link">
+                        <svg style=" width:16px; height:12px;">
+                            <use href="./img/icons.svg#icon-envelope"></use>
+                        </svg>
+                        <span>info@devstudio.com</span>
+                    </a>
+                </li>
+                <li class="contacts-header__item">
+                    <a href="tel:+380961111111" class="contacts-header__link">
+                        <svg style=" width:10px; height:16px;">
+                            <use href="./img/icons.svg#icon-smartphone"></use>
+                        </svg>
+                        <span>+38 096 111 11 11</span>
+                    </a>
                 </li>
             </ul>
         </div>
@@ -148,21 +159,46 @@
 
         <footer class="footer">
             <div class="footer__container container">
-                <a href="" class="footer__logo logo">
-                    <span>Web</span>Studio
-                </a>
-                <address class="footer__address">
-                    <div class="footer__street">
+                <div class="footer__column">
+                    <a href="" class="footer__logo logo">
+                        <span>Web</span>Studio
+                    </a>
+                    <address class="footer__address">
                         <p>г. Киев, пр-т Леси Украинки, 26</p>
-                    </div>
-                    <ul class="footer__contacts contacts-footer">
-                        <li class="contacts-footer__item"><a href="mailto:info@devstudio.com"
-                                class="contacts-footer__link">info@devstudio.com</a></li>
-                        <li class="contacts-footer__item"><a href="tel:+380961111111" class="contacts-footer__link">+38 096 111
-                                11
-                                11</a></li>
+                        <ul class="footer__contacts contacts-footer">
+                            <li class="contacts-footer__item"><a href="mailto:info@devstudio.com"
+                                    class="contacts-footer__link">info@devstudio.com</a></li>
+                            <li class="contacts-footer__item"><a href="tel:+380961111111" class="contacts-footer__link">+38 096
+                                    111 11
+                                    11</a></li>
+                        </ul>
+                    </address>
+                </div>
+                <div class="footer__column">
+                    <h3 class="footer__join">присоединяйтесь</h3>
+                    <ul class="footer__icons">
+                        <li>
+                            <svg style="width:20px; height:20px;">
+                                <use href="./img/icons.svg#icon-instagram-2"></use>
+                            </svg>
+                        </li>
+                        <li>
+                            <svg style="width:20px; height:20px;">
+                                <use href="./img/icons.svg#icon-twitter-1"></use>
+                            </svg>
+                        </li>
+                        <li>
+                            <svg style="width:20px; height:20px;">
+                                <use href="./img/icons.svg#icon-facebook-1"></use>
+                            </svg>
+                        </li>
+                        <li>
+                            <svg style="width:20px; height:20px;">
+                                <use href="./img/icons.svg#icon-linkedin-1"></use>
+                            </svg>
+                        </li>
                     </ul>
-                </address>
+                </div>
             </div>
         </footer>
 </body>
