--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     <li class="card-team__item"> <img src="./img/team/1.jpg" width="270" alt="Фото члена команды">
                         <div class="card-team__content">
                             <h3 class="card-team__title">Игорь Демьяненко</h3>
-                            <p class="card-team__text">Designer</p>
+                            <p class="card-team__text">Product Designer</p>
                         </div>
                         <ul class="card-team__icons">
                             <li>
