--- a/portfolio.html
+++ b/portfolio.html
@@ -157,49 +157,58 @@
 
     </main>
 
-        <footer class="footer">
-            <div class="footer__container container">
-                <div class="footer__column">
-                    <a href="" class="footer__logo logo">
-                        <span>Web</span>Studio
-                    </a>
-                    <address class="footer__address">
-                        <p>г. Киев, пр-т Леси Украинки, 26</p>
-                        <ul class="footer__contacts contacts-footer">
-                            <li class="contacts-footer__item"><a href="mailto:info@devstudio.com"
-                                    class="contacts-footer__link">info@devstudio.com</a></li>
-                            <li class="contacts-footer__item"><a href="tel:+380961111111" class="contacts-footer__link">+38 096
-                                    111 11
-                                    11</a></li>
-                        </ul>
-                    </address>
-                </div>
-                <div class="footer__column">
-                    <h3 class="footer__join">присоединяйтесь</h3>
-                    <ul class="footer__icons">
-                        <li>
+    <footer class="footer">
+        <div class="footer__container container">
+            <div class="footer__column">
+                <a href="" class="footer__logo logo">
+                    <span>Web</span>Studio
+                </a>
+                <address class="footer__address">
+                    <p>г. Киев, пр-т Леси Украинки, 26</p>
+                    <ul class="footer__contacts contacts-footer">
+                        <li class="contacts-footer__item"><a href="mailto:info@devstudio.com"
+                                class="contacts-footer__link">info@devstudio.com</a></li>
+                        <li class="contacts-footer__item"><a href="tel:+380961111111" class="contacts-footer__link">+38 096
+                                111 11
+                                11</a></li>
+                    </ul>
+                </address>
+            </div>
+            <div class="footer__column">
+                <h3 class="footer__join">присоединяйтесь</h3>
+                <ul class="footer__icons">
+                    <li>
+                        <a href="" class="footer__links">
                             <svg style="width:20px; height:20px;">
                                 <use href="./img/icons.svg#icon-instagram-2"></use>
                             </svg>
-                        </li>
-                        <li>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="" class="footer__links">
                             <svg style="width:20px; height:20px;">
                                 <use href="./img/icons.svg#icon-twitter-1"></use>
                             </svg>
-                        </li>
-                        <li>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="" class="footer__links">
                             <svg style="width:20px; height:20px;">
                                 <use href="./img/icons.svg#icon-facebook-1"></use>
                             </svg>
-                        </li>
-                        <li>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="" class="footer__links">
                             <svg style="width:20px; height:20px;">
                                 <use href="./img/icons.svg#icon-linkedin-1"></use>
                             </svg>
-                        </li>
-                    </ul>
-                </div>
+                        </a>
+    
+                    </li>
+                </ul>
             </div>
-        </footer>
+        </div>
+    </footer>
 </body>
 </html>
