--- a/portfolio.html
+++ b/portfolio.html
@@ -67,7 +67,13 @@
                 <ul class="portfolio__cards">
                     <li class="portfolio__card card-portfolio">
                         <a href="" class="card-portfolio__link">
-                            <img src="./img/portfolio/1.jpg" alt="Веб-сайт на мониторе" width="370" />
+                            <div class="card-portfolio__image">
+                                <img src="./img/portfolio/1.jpg" alt="Веб-сайт на мониторе" width="370" />
+                                <div class="card-portfolio__hover">
+                                    <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                        шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
+                            </div>
                             <div class="card-portfolio__content">
                                 <h2 class="card-portfolio__title">Технокряк</h2>
                                 <p class="card-portfolio__text">Веб-сайт</p>
@@ -77,7 +83,14 @@
                     </li>
                     <li class="portfolio__card card-portfolio">
                         <a href="" class="card-portfolio__link">
-                            <img src="./img/portfolio/2.jpg" alt="Игра в баскетбол" width="370" />
+                            <div class="card-portfolio__image">
+                                <img src="./img/portfolio/2.jpg" alt="Игра в баскетбол" width="370" />
+                                <div class="card-portfolio__hover">
+                                    <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
+                                        цифрового
+                                        шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
+                            </div>
                             <div class="card-portfolio__content">
                                 <h2 class="card-portfolio__title">Постер New Orlean vs Golden Star</h2>
                                 <p class="card-portfolio__text">Дизайн</p>
@@ -87,7 +100,14 @@
                     </li>
                     <li class="portfolio__card card-portfolio">
                         <a href="" class="card-portfolio__link">
-                            <img src="./img/portfolio/3.jpg" alt="Логотип ресторана морской еды" width="370" />
+                            <div class="card-portfolio__image">
+                                <img src="./img/portfolio/3.jpg" alt="Логотип ресторана морской еды" width="370" />
+                                <div class="card-portfolio__hover">
+                                    <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
+                                        цифрового
+                                        шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
+                            </div>
                             <div class="card-portfolio__content">
                                 <h2 class="card-portfolio__title">Ресторан Seafood</h2>
                                 <p class="card-portfolio__text">Приложение</p>
@@ -97,7 +117,14 @@
                     </li>
                     <li class="portfolio__card card-portfolio">
                         <a href="" class="card-portfolio__link">
-                            <img src="./img/portfolio/4.jpg" alt="Наушники" width="370" />
+                            <div class="card-portfolio__image">
+                                <img src="./img/portfolio/4.jpg" alt="Наушники" width="370" />
+                                <div class="card-portfolio__hover">
+                                    <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
+                                        цифрового
+                                        шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
+                            </div>
                             <div class="card-portfolio__content">
                                 <h2 class="card-portfolio__title">Проект Prime</h2>
                                 <p class="card-portfolio__text">Маркетинг</p>
@@ -106,7 +133,14 @@
                     </li>
                     <li class="portfolio__card card-portfolio">
                         <a href="" class="card-portfolio__link">
-                            <img src="./img/portfolio/5.jpg" alt="Коробки" width="370" />
+                            <div class="card-portfolio__image">
+                                <img src="./img/portfolio/5.jpg" alt="Коробки" width="370" />
+                                <div class="card-portfolio__hover">
+                                    <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
+                                        цифрового
+                                        шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
+                            </div>
                             <div class="card-portfolio__content">
                                 <h2 class="card-portfolio__title">Проект Boxes</h2>
                                 <p class="card-portfolio__text">Приложение</p>
@@ -115,7 +149,14 @@
                     </li>
                     <li class="portfolio__card card-portfolio">
                         <a href="" class="card-portfolio__link">
-                            <img src="./img/portfolio/6.jpg" alt="Монитор с веб-страницей" width="370" />
+                            <div class="card-portfolio__image">
+                                <img src="./img/portfolio/6.jpg" alt="Монитор с веб-страницей" width="370" />
+                                <div class="card-portfolio__hover">
+                                    <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
+                                        цифрового
+                                        шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
+                            </div>
                             <div class="card-portfolio__content">
                                 <h2 class="card-portfolio__title">Inspiration has no Borders</h2>
                                 <p class="card-portfolio__text">Веб-сайт</p>
@@ -124,7 +165,14 @@
                     </li>
                     <li class="portfolio__card card-portfolio">
                         <a href="" class="card-portfolio__link">
-                            <img src="./img/portfolio/7.jpg" alt="Раскрытая книга" width="370" />
+                            <div class="card-portfolio__image">
+                                <img src="./img/portfolio/7.jpg" alt="Раскрытая книга" width="370" />
+                                <div class="card-portfolio__hover">
+                                    <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
+                                        цифрового
+                                        шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
+                            </div>
                             <div class="card-portfolio__content">
                                 <h2 class="card-portfolio__title">Издание Limited Edition</h2>
                                 <p class="card-portfolio__text">Дизайн</p>
@@ -134,7 +182,14 @@
                     </li>
                     <li class="portfolio__card card-portfolio">
                         <a href="" class="card-portfolio__link">
-                            <img src="./img/portfolio/8.jpg" alt="Этикетка на веревке" width="370" />
+                            <div class="card-portfolio__image">
+                                <img src="./img/portfolio/8.jpg" alt="Этикетка на веревке" width="370" />
+                                <div class="card-portfolio__hover">
+                                    <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
+                                        цифрового
+                                        шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
+                            </div>
                             <div class="card-portfolio__content">
                                 <h2 class="card-portfolio__title">Проект LAB</h2>
                                 <p class="card-portfolio__text">Маркетинг</p>
@@ -144,7 +199,14 @@
                     </li>
                     <li class="portfolio__card card-portfolio">
                         <a href="" class="card-portfolio__link">
-                            <img src="./img/portfolio/9.jpg" alt="Человек печатает на ноутбуке" width="370" />
+                            <div class="card-portfolio__image">
+                                <img src="./img/portfolio/9.jpg" alt="Человек печатает на ноутбуке" width="370" />
+                                <div class="card-portfolio__hover">
+                                    <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
+                                        цифрового
+                                        шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
+                            </div>
                             <div class="card-portfolio__content">
                                 <h2 class="card-portfolio__title">Growing Business</h2>
                                 <p class="card-portfolio__text">Приложение</p>
