--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
                         <input class="modal__input" type="email" name="mail" id="name" placeholder=" " />
                         <div class="modal__icon">
                             <svg width="18px" height="18px">
-                                <use href="./img/icons.svg#icon-envelope"></use>
+                                <use href="./img/icons.svg#icon-env"></use>
                             </svg>
                         </div>
                     </li>
